# earnproof-contracts

./: .gitignore  Cargo.toml  README.md
contracts/issuer-registry/: Cargo.toml
contracts/issuer-registry/src/: lib.rs
contracts/proof-registry/: Cargo.toml
contracts/proof-registry/src/: lib.rs
contracts/protocol-config/: Cargo.toml
contracts/protocol-config/src/: lib.rs
docs/: backend-integration.md
scripts/: README.md  deployment-manifest.example.json
